# samsung-tv-remote

./: .gitignore  README.md  pyproject.toml  requirements.txt  samsung_tv_controller.py
electron-app/: README.md  package-lock.json  package.json
electron-app/src/: main.js  preload.js  tvClient.js
electron-app/src/renderer/: index.html  renderer.js
